src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Partner</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contract Review</fullName>
        </values>
        <values>
            <fullName>Dead - not a fit</fullName>
        </values>
        <values>
            <fullName>Dead - revisit</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Ramping</fullName>
        </values>
        <values>
            <fullName>Signed</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Market Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ACV (annual contract value) is a metric that shows you how much an ongoing customer contract is worth by averaging and normalizing its value over one year.
ACV = Total contract value ÷ Number of years</description>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AWS_Marketplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AWS Marketplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AWS_Registered_in_ACE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AWS Registered in ACE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepted_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Score__c</fullName>
        <label>Champion Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <inlineHelpText>Someone in the buying organization who has a vested interest in your success and acts on your behalf within their organization. A powerful &amp; influential person, who is favorable to your solution.</inlineHelpText>
        <label>Champion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beat on Price</fullName>
                </value>
                <value>
                    <fullName>Clean Up</fullName>
                </value>
                <value>
                    <fullName>Competing Priorities</fullName>
                </value>
                <value>
                    <fullName>Exogenous Event</fullName>
                </value>
                <value>
                    <fullName>Missing Product Features</fullName>
                </value>
                <value>
                    <fullName>Outsold</fullName>
                </value>
                <value>
                    <fullName>Poor Qualification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitior_Score__c</fullName>
        <label>Competitior Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lost_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build Your Own</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Gitlab</fullName>
                </value>
                <value>
                    <fullName>Azure DevOps</fullName>
                </value>
                <value>
                    <fullName>Atlassian</fullName>
                </value>
                <value>
                    <fullName>Harness</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_others__c</fullName>
        <label>Competitor(others)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_with_Client_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected with Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Metric_Information__c</fullName>
        <label>Contract Metric Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Meets_Minimal_Install_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Meets Minimal Install Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_found_us_here__c</fullName>
        <label>Customer found us here</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Amount_Won__c</fullName>
        <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended.</description>
        <inlineHelpText>Number of times the Close Date has been extended.</inlineHelpText>
        <label># Close Date Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Month_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended from one month to another.</description>
        <inlineHelpText>Number of times the Close Date has been extended from one month to another month.</inlineHelpText>
        <label># Close Date Month Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Date_Opportunity_was_Closed__c</fullName>
        <description>Date the Opportunity was actually closed.</description>
        <inlineHelpText>Date the Stage was changed to Closed Won or Lost</inlineHelpText>
        <label>Date Opportunity was Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open__c</fullName>
        <formula>IF(ISBLANK( DashboardsGSP__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
DashboardsGSP__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes the day the Opportunity was opened.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Since_Last_Stage_Change__c</fullName>
        <description>Number of days since the last change in Opportunity Stage.</description>
        <formula>IF(ISBLANK(DashboardsGSP__Date_Opportunity_was_Closed__c),
TODAY()-DashboardsGSP__Last_Stage_Change_Date__c,
DashboardsGSP__Date_Opportunity_was_Closed__c - DashboardsGSP__Last_Stage_Change_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the Opportunity Stage was last changed.</inlineHelpText>
        <label>Days Since Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Blockers_First_Identified_Date__c</fullName>
        <label>Deal Blockers First Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Blockers__c</fullName>
        <label>Deal Blockers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria_Score__c</fullName>
        <label>Decision Criteria Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <inlineHelpText>The criteria the company uses to make the decision to purchase your solution. What is the criteria used by the company to make the purchasing decision and choose among the various options.</inlineHelpText>
        <label>Decision Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Process_Score__c</fullName>
        <label>Decision Process Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <inlineHelpText>The process the company uses to make the decision. The process defined by the company to reach the purchase decision.</inlineHelpText>
        <label>Decision Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EB_Meeting_Occured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EB Meeting Occured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Score__c</fullName>
        <label>Economic Buyer Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <inlineHelpText>The company’s economic buyer. The person who actually has the authority to make the decision and release the budget. The person who has decision control on the funds for the purchase.</inlineHelpText>
        <label>Economic Buyer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Conversion_Date__c</fullName>
        <label>First Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Conversion__c</fullName>
        <label>First Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is an account of high priority to be reviewed by Founders and Functional Leads.</inlineHelpText>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Amount_Won__c</fullName>
        <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Close_Date_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Close Date Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Close_Date_Month_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Close Date Month Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Date_Opportunity_was_Closed__c</fullName>
        <label>Date Opportunity was Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Days_Open__c</fullName>
        <formula>IF(ISBLANK( GSPDashProf__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
GSPDashProf__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Days_Since_Last_Stage_Change__c</fullName>
        <formula>IF(ISBLANK(GSPDashProf__Date_Opportunity_was_Closed__c),
TODAY()-GSPDashProf__Last_Stage_Change_Date__c,
GSPDashProf__Date_Opportunity_was_Closed__c - GSPDashProf__Last_Stage_Change_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSPDashProf__Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_Marketplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Marketplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Pain_Score__c</fullName>
        <label>Identify Pain Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_Pain__c</fullName>
        <inlineHelpText>Actual pains that the company would require your solution to relieve. A customer must have a need or a pain before they pursue a solution.</inlineHelpText>
        <label>Identify Pain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Status__c</fullName>
        <label>Install Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Requests__c</fullName>
        <label>Integration Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_old__c</fullName>
        <label>Lead Source Detail old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_and_Infosec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal and Infosec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Proposal__c</fullName>
        <label>Link to Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_external_notes__c</fullName>
        <label>Link to external notes</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Linkage__c</fullName>
        <description>finding ways to link this opportunity to a greater organizational initiative</description>
        <inlineHelpText>finding ways to link this opportunity to a greater organizational initiative</inlineHelpText>
        <label>Linkage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Notes__c</fullName>
        <label>Loss Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Product Fit</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Lost Engagement</fullName>
                </value>
                <value>
                    <fullName>Priorities</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MEDDPICC_Score__c</fullName>
        <formula>VALUE(TEXT(Champion_Score__c )) +  VALUE(TEXT(Competitior_Score__c)) + VALUE(TEXT(Decision_Process_Score__c ))+ VALUE(TEXT(Decision_Criteria_Score__c)) + VALUE(TEXT(Metric_Score__c)) + VALUE(TEXT(Economic_Buyer_Score__c ))+ VALUE(TEXT(Paper_Process_Score__c)) + VALUE(TEXT(Identify_Pain_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEDDPICC Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MNDA_Signed_Date__c</fullName>
        <label>MNDA Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MNDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MNDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRC_s_Minimum_Required_Capabilities__c</fullName>
        <label>MRC&apos;s: Minimum Required Capabilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metric_Score__c</fullName>
        <label>Metric Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metrics__c</fullName>
        <inlineHelpText>The economic benefits of your solution. What is the quantifiable economic gain and benefit of your solution?</inlineHelpText>
        <label>Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Azure_Marketplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Azure Marketplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Notes__c</fullName>
        <label>Next Step Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>What is the source of this Opportunity</description>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Founder Referral</fullName>
                </value>
                <value>
                    <fullName>Investor Referral</fullName>
                </value>
                <value>
                    <fullName>Referral Programs</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>AE Prospecting</fullName>
                </value>
                <value>
                    <fullName>SDR Prospecting</fullName>
                </value>
                <value>
                    <fullName>Marketing/Demand Gen</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBO_s_Positive_Business_Outcomes__c</fullName>
        <label>PBO&apos;s Positive Business Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Blocker__c</fullName>
        <label>POC Blocker</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Complete_Date__c</fullName>
        <label>POC Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_Next_Step__c</fullName>
        <label>POC Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Phases__c</fullName>
        <label>POC Phases</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-Pre-Demo</fullName>
                    <default>true</default>
                    <label>0-Pre-Demo</label>
                </value>
                <value>
                    <fullName>1-Demo</fullName>
                </value>
                <value>
                    <fullName>2-Identify Use Case/Requirements</fullName>
                </value>
                <value>
                    <fullName>3-Planned</fullName>
                </value>
                <value>
                    <fullName>4-In Progress</fullName>
                </value>
                <value>
                    <fullName>5-Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POC_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Requirements__c</fullName>
        <label>POC Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Start_Date__c</fullName>
        <label>POC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>text box to enter the actual PO number, If someone in Accounts Receivable needs to track down a late payment, they can track this PO number on an opportunity</description>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Process_Score__c</fullName>
        <label>Paper Process Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_Process__c</fullName>
        <inlineHelpText>The paper process the company uses to process and sign the order.</inlineHelpText>
        <label>Paper Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Partnership_Type__c</fullName>
        <label>Primary Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>System Integrator (SI)</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Independent Software Vendor (ISV)</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Value-Added Reseller (VAR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unified Insights</fullName>
                </value>
                <value>
                    <fullName>Pipelines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Use_Case__c</fullName>
        <label>Primary Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SDLC</fullName>
                </value>
                <value>
                    <fullName>IaC</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Conversion_Date__c</fullName>
        <label>Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recent_Conversion__c</fullName>
        <label>Recent Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relative_Priority__c</fullName>
        <label>Relative Priority</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewals_Percentage_Net_Revenue__c</fullName>
        <label>Renewals Percentage Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Factors__c</fullName>
        <label>Risk Factors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to connect an SDR to an Opportunity</description>
        <label>SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Sourced</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDR_text__c</fullName>
        <description>Field to be deleted once confirmed it is not used in Salesloft</description>
        <label>SDR (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>